--- a/index.html
+++ b/index.html
@@ -105,9 +105,43 @@
 
       <div class="cards">
         <div class="cards_list">
-          <div class="cards_item cards_item--1">Market Overview</div>
-          <div class="cards_item cards_item--2">GODEYE</div>
-          <div class="cards_item cards_item--3">ai sniper</div>
+          <div class="cards_item cards_item--1">
+            <span>Market Overview</span>
+            <div class="cards_itemMobileDescription">
+              Explore exclusive events related to BRC20 directly on your
+              homepage. Delve deeper using tooltips to gain insights into each
+              category, and utilize filters to focus on the events that capture
+              your interest. Access detailed token metrics, including balances,
+              trades, and Smart Money data, by searching for any token in our
+              dashboard. Visit Token Paradise for a comprehensive overview of
+              price fluctuations, on-chain flows, and key metrics for trending
+              tokens
+            </div>
+          </div>
+          <div class="cards_item cards_item--2">
+            <span>GODEYE</span>
+            <div class="cards_itemMobileDescription">
+              Utilize our newly introduced GodEye feature, enabling you to
+              search for Wallets, Entities, and aggregated activity related to
+              Labels and Smart Segments you've established. Investigate the
+              connections between wallets and monitor the activity of interest.
+              Save specific wallets, tokens, and NFTs to your Watchlists for
+              easy tracking
+            </div>
+          </div>
+          <div class="cards_item cards_item--3">
+            <span>ai sniper</span>
+            <div class="cards_itemMobileDescription">
+              Configure our bots to automatically purchase the top BRC20
+              collections based on our analytical system. Receive alerts for
+              specific on-chain events. Stay informed about real-time
+              transactions and token/NFT transfers executed by wallets,
+              entities, or groups of wallets with a particular label of
+              interest. For instance, receive notifications like: "Smart Money
+              distributed $14,218 of ABC in the past 24 hours (14 times the
+              recent average)
+            </div>
+          </div>
         </div>
 
         <div class="cards_listFake">
@@ -139,50 +173,40 @@
         </div>
       </div>
 
+      <div class="bottom"></div>
+
       <div class="footer">
-        <div class="footer_container">
-          <!-- <div class="footer_textBlock">
-            <h2 class="footer_title">
-              <img class="footer_logo" src="./img/brain.png" alt="mevaibot" />
-              mevaibot
-            </h2>
-            <p class="footer_description">
-              Maximise your profit from ordinals trading
-            </p>
-          </div>
-          <div class="footer_social">
-            <p class="footer_socialLabel">support</p>
-            <div class="footer_socialList">
-              <a class="footer_socialItem" href="https://twitter.com/MevAi_bot">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="46"
-                  height="38"
-                  viewBox="0 0 46 38"
-                  fill="none"
-                >
-                  <path
-                    d="M41.533 0.212925L1.40835 15.97C0.104662 16.3997 0.249517 18.2619 1.55321 18.6917L11.693 21.8431L15.7489 34.4487C16.0386 35.4514 17.3423 35.7379 18.0666 35.0217L24.0056 29.5783L35.3043 37.7434C36.1734 38.3163 37.3322 37.8866 37.6219 36.8839L45.4441 3.65083C45.8786 1.21565 43.7058 -0.646551 41.533 0.212925ZM18.0666 24.2782L16.7629 31.727L13.8658 21.4133L42.1124 3.07784L18.0666 24.2782Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-              <a class="footer_socialItem" href="https://t.me/mevaibot">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="48"
-                  height="40"
-                  viewBox="0 0 48 40"
-                  fill="none"
-                >
-                  <path
-                    d="M47.625 5.82758L42.5625 6.67133L45.9375 2.45258L40.0312 4.14008C32.4375 -4.29742 20.625 4.98383 24 12.5776C10.5 12.5776 3.75 2.45258 3.75 2.45258C3.75 2.45258 -1.3125 10.0463 7.125 15.9526L2.0625 14.2651C2.0625 19.3276 5.4375 22.7026 11.3438 24.3901H5.4375C8.8125 31.1401 14.7188 31.1401 14.7188 31.1401C14.7188 31.1401 9.65625 35.3588 0.375 35.3588C28.2188 48.8588 45.0938 23.5463 42.5625 10.0463L47.625 5.82758Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-            </div>
-          </div> -->
+        <h2 class="footer_title">ORDI SNIPE</h2>
+        <p class="footer_description">придумать слоган или фразу</p>
+        <div class="footer_socialList">
+          <a class="footer_socialItem" href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="46"
+              height="38"
+              viewBox="0 0 46 38"
+              fill="none"
+            >
+              <path
+                d="M41.533 0.212925L1.40835 15.97C0.104662 16.3997 0.249517 18.2619 1.55321 18.6917L11.693 21.8431L15.7489 34.4487C16.0386 35.4514 17.3423 35.7379 18.0666 35.0217L24.0056 29.5783L35.3043 37.7434C36.1734 38.3163 37.3322 37.8866 37.6219 36.8839L45.4441 3.65083C45.8786 1.21565 43.7058 -0.646551 41.533 0.212925ZM18.0666 24.2782L16.7629 31.727L13.8658 21.4133L42.1124 3.07784L18.0666 24.2782Z"
+                fill="#1D1D1F"
+              />
+            </svg>
+          </a>
+          <a class="footer_socialItem" href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="48"
+              height="40"
+              viewBox="0 0 48 40"
+              fill="none"
+            >
+              <path
+                d="M47.625 5.82758L42.5625 6.67133L45.9375 2.45258L40.0312 4.14008C32.4375 -4.29742 20.625 4.98383 24 12.5776C10.5 12.5776 3.75 2.45258 3.75 2.45258C3.75 2.45258 -1.3125 10.0463 7.125 15.9526L2.0625 14.2651C2.0625 19.3276 5.4375 22.7026 11.3438 24.3901H5.4375C8.8125 31.1401 14.7188 31.1401 14.7188 31.1401C14.7188 31.1401 9.65625 35.3588 0.375 35.3588C28.2188 48.8588 45.0938 23.5463 42.5625 10.0463L47.625 5.82758Z"
+                fill="#1D1D1F"
+              />
+            </svg>
+          </a>
         </div>
       </div>
     </main>
