--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="description">
         <h2 class="description_title">about</h2>
-        <p class="description_text">
+        <p class="description_text" id="writer">
           wisp team is a group of independent developers, our goal is to provide
           a simple and affordable tool for automated market trading. Our native
           token, the White Wisp Token (WWT), is designed to be used in the
@@ -210,5 +210,7 @@
         </div>
       </div>
     </main>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
