Добавляет новый дизайн

--- a/index.html
+++ b/index.html
@@ -18,199 +18,244 @@
   <body>
     <main class="main">
       <div class="header">
-        <h1 class="header_title">ORDI SNIPE</h1>
-        <p class="header_description">
-          ANALYTICAL PLATFORM BRC20, THE INAUGURAL ADVANCEMENT IN ARTIFICIAL
-          INTELLIGENCE EVOLUTION
-        </p>
+        <div class="header_top">
+          <h1 class="header_title">
+            <img src="./img/title-image.png" width="115" height="115" alt="" />
+            <span>ORDI SNIPE</span>
+          </h1>
+          <nav class="header_menu">
+            <a class="header_menuItem" href="">about</a>
+            <a class="header_menuItem" href="">mission</a>
+            <a class="header_menuItem" href="">feature</a>
+            <a class="header_menuItem" href="">roadmap</a>
+          </nav>
+        </div>
 
-        <a
-          class="header_link"
-          href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x903C120966437A4f5fECC1113cEf9957F30AA4AA"
-        >
-          Trading on Uniswap
-        </a>
+        <div class="header_bottom">
+          <div class="header_left">
+            <p class="header_description">
+              ANALYTICAL PLATFORM BRC20, THE INAUGURAL ADVANCEMENT IN ARTIFICIAL
+              INTELLIGENCE EVOLUTION
+            </p>
 
-        <p class="header_adress">CA: (адрес)</p>
+            <a
+              class="header_link"
+              href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x903C120966437A4f5fECC1113cEf9957F30AA4AA"
+            >
+              Trading on Uniswap
+            </a>
+
+            <p class="header_adress">CONTRACT ADRESS:</p>
+          </div>
+
+          <div class="header_right">
+            <img
+              src="./img/header-screen.png"
+              width="1851"
+              height="1202"
+              alt=""
+            />
+          </div>
+        </div>
       </div>
 
-      <div class="description">
-        <h2 class="description_title">about</h2>
-        <p class="description_text" id="writer">
-          wisp team is a group of independent developers, our goal is to provide
-          a simple and affordable tool for automated market trading. Our native
-          token, the White Wisp Token (WWT), is designed to be used in the
-          trading system, allowing users to put it in staking or pay them
-          directly. It is important to note that we have not reserved tokens for
-          team members, nor do we have investors, advisors or other early
-          holders. Our token will be fully hosted on a decentralized platform
-          for efficient ecosystem management.
+      <div class="about">
+        <h2 class="about_title">about</h2>
+        <p class="about_text" id="writer">
+          Ordi snipe is an innovative analytical platform, based on advanced
+          artificial intelligence technologies, specifically designed to
+          identify potentially profitable assets at early stages in the Bitcoin
+          network. Our platform analyzes large volumes of data using complex
+          algorithms and machine learning to provide users with accurate and
+          timely investment recommendations.
         </p>
       </div>
 
-      <div class="screens"></div>
+      <div class="mission">
+        <h2 class="mission_title">mission</h2>
+        <p class="mission_text">
+          Ordi snipe helps users make informed decisions based on reliable
+          analytics and trend forecasting. We offer a unique opportunity to
+          access information about potentially profitable assets even before
+          they become widely known in the market. Our goal is to help our users
+          increase their investment opportunities and achieve financial success
+          in the world of cryptocurrencies.
+        </p>
+      </div>
+
+      <div class="feature">
+        <div class="feature_container">
+          <h2 class="feature_title">feature</h2>
+          <ul class="feature_list">
+            <li class="feature_item feature_item-1">
+              <span></span>
+              Reduced exposure to risk
+            </li>
+            <li class="feature_item feature_item-2">
+              <span></span>
+              Equitable pricing
+            </li>
+            <div class="feature_line-wrapper">
+              <li class="feature_item">
+                <span></span>
+                Enhanced user satisfaction
+              </li>
+              <li class="feature_item">
+                <span></span>
+                ecological sustainability
+              </li>
+            </div>
+          </ul>
+        </div>
+      </div>
 
       <div class="roadmap">
         <h2 class="roadmap_title">roadmap</h2>
         <div class="roadmap_stages">
           <div class="roadmap_top">
-            <div class="roadmap_cell">
-              <span
-                >Data collection on the market, selection of strong segments
-              </span>
-              <div class="roadmap_round">Q3 2023</div>
-            </div>
-            <div class="roadmap_cell">
-              <span>
-                Project architecture development. Address labeling in our own
-                database
-              </span>
-              <div class="roadmap_round">Q3 2023</div>
-            </div>
-            <div class="roadmap_cell">
-              <span>Token Launch</span>
-              <div class="roadmap_round">Q4 2023</div>
-            </div>
-            <div class="roadmap_cell">
-              <span>Public launch</span>
-              <div class="roadmap_round">Q1 2024</div>
-            </div>
+            <img
+              class="roadmap_item roadmap_item-1"
+              src="./img/stage1.png"
+              width="352"
+              height="604"
+              alt=""
+            />
+            <img
+              class="roadmap_item roadmap_item-2"
+              src="./img/stage1.png"
+              width="352"
+              height="604"
+              alt=""
+            />
+            <img
+              class="roadmap_item roadmap_item-3"
+              src="./img/stage1.png"
+              width="352"
+              height="604"
+              alt=""
+            />
+            <img
+              class="roadmap_item roadmap_item-4"
+              src="./img/stage1.png"
+              width="352"
+              height="604"
+              alt=""
+            />
           </div>
           <div class="roadmap_bottom">
-            <div class="roadmap_cell">
-              <span>Sniper Bot Launch</span>
-              <div class="roadmap_round">Q1 2024</div>
-            </div>
-            <div class="roadmap_cell">
-              <span>Burn Event</span>
-              <div class="roadmap_round">Q1 2024</div>
-            </div>
-            <div class="roadmap_cell">
-              <span>Tier 2 CEX LISTING</span>
-              <div class="roadmap_round">Q2 2024</div>
-            </div>
+            <img
+              class="roadmap_item roadmap_item-5"
+              src="./img/stage5.png"
+              width="446"
+              height="258"
+              alt=""
+            />
+            <img
+              class="roadmap_item roadmap_item-5"
+              src="./img/stage1.png"
+              width="352"
+              height="604"
+              alt=""
+            />
+            <img
+              class="roadmap_item roadmap_item-5"
+              src="./img/stage5.png"
+              width="446"
+              height="258"
+              alt=""
+            />
           </div>
         </div>
       </div>
 
-      <div class="team">
-        <h2 class="team_title">team</h2>
-        <p class="team_description">
-          This team has come together around a common mission to create a
-          technologically innovative and financially sustainable future through
-          blockchain solutions.
+      <div class="coming">
+        <a class="coming_link" href="#">
+          <span>Coming soon</span>
+          <img width="186" height="186" src="./img/icon-click.png" alt="" />
+        </a>
+        <img class="coming_screen" src="./img/screen-coming.png" alt="" />
+        <p class="coming_description">
+          Catch the latest on our socials Catch the latest on our socials Catch
+          the latest on our socials Catch the latest on our socials
         </p>
-        <div class="team_orangeBlock"></div>
       </div>
-
-      <div class="cards">
-        <div class="cards_list">
-          <div class="cards_item cards_item--1">
-            <span>Market Overview</span>
-            <div class="cards_itemMobileDescription">
-              Explore exclusive events related to BRC20 directly on your
-              homepage. Delve deeper using tooltips to gain insights into each
-              category, and utilize filters to focus on the events that capture
-              your interest. Access detailed token metrics, including balances,
-              trades, and Smart Money data, by searching for any token in our
-              dashboard. Visit Token Paradise for a comprehensive overview of
-              price fluctuations, on-chain flows, and key metrics for trending
-              tokens
-            </div>
-          </div>
-          <div class="cards_item cards_item--2">
-            <span>GODEYE</span>
-            <div class="cards_itemMobileDescription">
-              Utilize our newly introduced GodEye feature, enabling you to
-              search for Wallets, Entities, and aggregated activity related to
-              Labels and Smart Segments you've established. Investigate the
-              connections between wallets and monitor the activity of interest.
-              Save specific wallets, tokens, and NFTs to your Watchlists for
-              easy tracking
-            </div>
-          </div>
-          <div class="cards_item cards_item--3">
-            <span>ai sniper</span>
-            <div class="cards_itemMobileDescription">
-              Configure our bots to automatically purchase the top BRC20
-              collections based on our analytical system. Receive alerts for
-              specific on-chain events. Stay informed about real-time
-              transactions and token/NFT transfers executed by wallets,
-              entities, or groups of wallets with a particular label of
-              interest. For instance, receive notifications like: "Smart Money
-              distributed $14,218 of ABC in the past 24 hours (14 times the
-              recent average)
-            </div>
-          </div>
-        </div>
-
-        <div class="cards_listFake">
-          <div class="cards_itemFake">
-            Explore exclusive events related to BRC20 directly on your homepage.
-            Delve deeper using tooltips to gain insights into each category, and
-            utilize filters to focus on the events that capture your interest.
-            Access detailed token metrics, including balances, trades, and Smart
-            Money data, by searching for any token in our dashboard. Visit Token
-            Paradise for a comprehensive overview of price fluctuations,
-            on-chain flows, and key metrics for trending tokens
-          </div>
-          <div class="cards_itemFake">
-            Utilize our newly introduced GodEye feature, enabling you to search
-            for Wallets, Entities, and aggregated activity related to Labels and
-            Smart Segments you've established. Investigate the connections
-            between wallets and monitor the activity of interest. Save specific
-            wallets, tokens, and NFTs to your Watchlists for easy tracking
-          </div>
-          <div class="cards_itemFake">
-            Configure our bots to automatically purchase the top BRC20
-            collections based on our analytical system. Receive alerts for
-            specific on-chain events. Stay informed about real-time transactions
-            and token/NFT transfers executed by wallets, entities, or groups of
-            wallets with a particular label of interest. For instance, receive
-            notifications like: "Smart Money distributed $14,218 of ABC in the
-            past 24 hours (14 times the recent average)
-          </div>
-        </div>
-      </div>
-
-      <div class="bottom"></div>
 
       <div class="footer">
-        <h2 class="footer_title">ORDI SNIPE</h2>
-        <p class="footer_description">придумать слоган или фразу</p>
-        <div class="footer_socialList">
-          <a class="footer_socialItem" href="">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="46"
-              height="38"
-              viewBox="0 0 46 38"
-              fill="none"
-            >
-              <path
-                d="M41.533 0.212925L1.40835 15.97C0.104662 16.3997 0.249517 18.2619 1.55321 18.6917L11.693 21.8431L15.7489 34.4487C16.0386 35.4514 17.3423 35.7379 18.0666 35.0217L24.0056 29.5783L35.3043 37.7434C36.1734 38.3163 37.3322 37.8866 37.6219 36.8839L45.4441 3.65083C45.8786 1.21565 43.7058 -0.646551 41.533 0.212925ZM18.0666 24.2782L16.7629 31.727L13.8658 21.4133L42.1124 3.07784L18.0666 24.2782Z"
-                fill="#1D1D1F"
+        <div class="footer_container">
+          <div class="footer_titleWrapper">
+            <h1 class="footer_title">
+              <img
+                src="./img/title-image.png"
+                width="100"
+                height="100"
+                alt=""
               />
-            </svg>
-          </a>
-          <a class="footer_socialItem" href="">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="48"
-              height="40"
-              viewBox="0 0 48 40"
-              fill="none"
-            >
-              <path
-                d="M47.625 5.82758L42.5625 6.67133L45.9375 2.45258L40.0312 4.14008C32.4375 -4.29742 20.625 4.98383 24 12.5776C10.5 12.5776 3.75 2.45258 3.75 2.45258C3.75 2.45258 -1.3125 10.0463 7.125 15.9526L2.0625 14.2651C2.0625 19.3276 5.4375 22.7026 11.3438 24.3901H5.4375C8.8125 31.1401 14.7188 31.1401 14.7188 31.1401C14.7188 31.1401 9.65625 35.3588 0.375 35.3588C28.2188 48.8588 45.0938 23.5463 42.5625 10.0463L47.625 5.82758Z"
-                fill="#1D1D1F"
-              />
-            </svg>
-          </a>
+              <span>ORDI SNIPE</span>
+              <span class="footer_description"
+                >(c) All RIGHTS RESERVED 2024</span
+              >
+            </h1>
+          </div>
+          <div class="footer_socialList">
+            <a class="footer_socialItem" href="#">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="56"
+                height="56"
+                viewBox="0 0 56 56"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_1095_112)">
+                  <path
+                    d="M18.8335 14C22.4802 14 25.9776 15.475 28.5562 18.1005C31.1348 20.726 32.5835 24.287 32.5835 28C32.5835 31.713 31.1348 35.274 28.5562 37.8995C25.9776 40.525 22.4802 42 18.8335 42C15.1868 42 11.6894 40.525 9.11078 37.8995C6.53215 35.274 5.0835 31.713 5.0835 28C5.0835 24.287 6.53215 20.726 9.11078 18.1005C11.6894 15.475 15.1868 14 18.8335 14ZM39.4585 16.3333C42.896 16.3333 45.1877 21.5577 45.1877 28C45.1877 34.4423 42.896 39.6667 39.4585 39.6667C36.021 39.6667 33.7293 34.4423 33.7293 28C33.7293 21.5577 36.021 16.3333 39.4585 16.3333ZM48.6252 17.5C49.496 17.5 50.2568 19.4297 50.6418 22.7407L50.7495 23.7743L50.7931 24.3227L50.8618 25.4753L50.8847 26.0797L50.9122 27.342L50.9168 28L50.9122 28.658L50.8847 29.9203L50.8618 30.527L50.7931 31.6773L50.7472 32.2257L50.6441 33.2593C50.2568 36.5727 49.4983 38.5 48.6252 38.5C47.7543 38.5 46.9935 36.5703 46.6085 33.2593L46.5008 32.2257C46.485 32.043 46.4705 31.8602 46.4572 31.6773L46.3885 30.5247C46.3796 30.3233 46.372 30.1218 46.3656 29.9203L46.3381 28.658V27.342L46.3656 26.0797L46.3885 25.473L46.4572 24.3227L46.5031 23.7743L46.6062 22.7407C46.9935 19.4273 47.752 17.5 48.6252 17.5Z"
+                    fill="#3A9F3B"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_1095_112">
+                    <rect
+                      width="55"
+                      height="56"
+                      fill="white"
+                      transform="translate(0.5)"
+                    />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+            <a class="footer_socialItem" href="#">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="46"
+                height="38"
+                viewBox="0 0 46 38"
+                fill="none"
+              >
+                <path
+                  d="M41.533 0.212925L1.40835 15.97C0.104662 16.3997 0.249517 18.2619 1.55321 18.6917L11.693 21.8431L15.7489 34.4487C16.0386 35.4514 17.3423 35.7379 18.0666 35.0217L24.0056 29.5783L35.3043 37.7434C36.1734 38.3163 37.3322 37.8866 37.6219 36.8839L45.4441 3.65083C45.8786 1.21565 43.7058 -0.646551 41.533 0.212925ZM18.0666 24.2782L16.7629 31.727L13.8658 21.4133L42.1124 3.07784L18.0666 24.2782Z"
+                  fill="#3A9F3B"
+                />
+              </svg>
+            </a>
+            <a class="footer_socialItem" href="#"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="52"
+                height="52"
+                viewBox="0 0 52 52"
+                fill="none"
+              >
+                <path
+                  d="M39.4442 4.875H46.6116L30.9531 22.7717L49.3741 47.125H34.9484L23.6514 32.3548L10.7251 47.125H3.5534L20.3017 27.9825L2.63257 4.875H17.4201L27.6316 18.3755L39.4442 4.875ZM36.9287 42.835H40.9002L15.2642 8.93967H11.0024L36.9287 42.835Z"
+                  fill="#319933"
+                />
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </main>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
   </body>
 </html>
