--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <span>ORDI SNIPE</span>
           </h1>
           <nav class="header_menu">
-            <a class="header_menuItem" href="">about</a>
-            <a class="header_menuItem" href="">mission</a>
-            <a class="header_menuItem" href="">feature</a>
-            <a class="header_menuItem" href="">roadmap</a>
+            <a class="header_menuItem" href="#about">about</a>
+            <a class="header_menuItem" href="#mission">mission</a>
+            <a class="header_menuItem" href="#feature">feature</a>
+            <a class="header_menuItem" href="#roadmap">roadmap</a>
           </nav>
         </div>
 
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <div class="about">
+      <div id="about" class="about">
         <h2 class="about_title">about</h2>
         <p class="about_text" id="writer">
           Ordi snipe is an innovative analytical platform, based on advanced
@@ -71,7 +71,7 @@
         </p>
       </div>
 
-      <div class="mission">
+      <div id="mission" class="mission">
         <h2 class="mission_title">mission</h2>
         <p class="mission_text">
           Ordi snipe helps users make informed decisions based on reliable
@@ -83,7 +83,7 @@
         </p>
       </div>
 
-      <div class="feature">
+      <div id="feature" class="feature">
         <div class="feature_container">
           <h2 class="feature_title">feature</h2>
           <ul class="feature_list">
@@ -98,7 +98,8 @@
             <div class="feature_line-wrapper">
               <li class="feature_item">
                 <span></span>
-                Enhanced user satisfaction
+                Enhanced user <br />
+                satisfaction
               </li>
               <li class="feature_item">
                 <span></span>
@@ -109,7 +110,7 @@
         </div>
       </div>
 
-      <div class="roadmap">
+      <div id="roadmap" class="roadmap">
         <h2 class="roadmap_title">roadmap</h2>
         <div class="roadmap_stages">
           <div class="roadmap_top">
@@ -122,21 +123,21 @@
             />
             <img
               class="roadmap_item roadmap_item-2"
-              src="./img/stage1.png"
+              src="./img/stage2.png"
               width="352"
               height="604"
               alt=""
             />
             <img
               class="roadmap_item roadmap_item-3"
-              src="./img/stage1.png"
+              src="./img/stage3.png"
               width="352"
               height="604"
               alt=""
             />
             <img
               class="roadmap_item roadmap_item-4"
-              src="./img/stage1.png"
+              src="./img/stage4.png"
               width="352"
               height="604"
               alt=""
@@ -152,14 +153,14 @@
             />
             <img
               class="roadmap_item roadmap_item-5"
-              src="./img/stage1.png"
-              width="352"
-              height="604"
+              src="./img/stage6.png"
+              width="258"
+              height="443"
               alt=""
             />
             <img
               class="roadmap_item roadmap_item-5"
-              src="./img/stage5.png"
+              src="./img/stage7.png"
               width="446"
               height="258"
               alt=""
@@ -173,7 +174,23 @@
           <span>Coming soon</span>
           <img width="186" height="186" src="./img/icon-click.png" alt="" />
         </a>
-        <img class="coming_screen" src="./img/screen-coming.png" alt="" />
+        <div class="coming_screen">
+          <img
+            class="coming_screenImg-1"
+            src="./img/screen-coming.png"
+            alt=""
+          />
+          <img
+            class="coming_screenImg-2"
+            src="./img/screen-coming.png"
+            alt=""
+          />
+          <img
+            class="coming_screenImg-3"
+            src="./img/screen-coming.png"
+            alt=""
+          />
+        </div>
         <p class="coming_description">
           Catch the latest on our socials Catch the latest on our socials Catch
           the latest on our socials Catch the latest on our socials
@@ -184,12 +201,7 @@
         <div class="footer_container">
           <div class="footer_titleWrapper">
             <h1 class="footer_title">
-              <img
-                src="./img/title-image.png"
-                width="100"
-                height="100"
-                alt=""
-              />
+              <img src="./img/title-image.png" width="90" height="90" alt="" />
               <span>ORDI SNIPE</span>
               <span class="footer_description"
                 >(c) All RIGHTS RESERVED 2024</span
