Начад адаптив хедера

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <body>
     <main class="main">
       <div class="header">
+        <img class="header_bg-left" src="./img/header-bg-left.png" alt="" />
+        <img class="header_bg-right" src="./img/header-bg-right.png" alt="" />
         <div class="header_top">
           <h1 class="header_title">
             <img src="./img/title-image.png" width="115" height="115" alt="" />
