Добавляет новый адаптив

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
               alt=""
             />
             <img
-              class="roadmap_item roadmap_item-5"
+              class="roadmap_item roadmap_item-6"
               src="./img/stage6.png"
               width="258"
               height="443"
               alt=""
             />
             <img
-              class="roadmap_item roadmap_item-5"
+              class="roadmap_item roadmap_item-7"
               src="./img/stage7.png"
               width="446"
               height="258"
@@ -211,7 +211,38 @@
             </h1>
           </div>
           <div class="footer_socialList">
-            <a class="footer_socialItem" href="#">
+            <button class="footer_socialItem footer_socialItem--apple">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="52"
+                viewBox="0 0 48 52"
+                fill="none"
+              >
+                <path
+                  d="M40.5 3.6875H7.5C5.016 3.6875 3 5.8295 3 8.46875V43.5312C3 46.1705 5.016 48.3125 7.5 48.3125H40.5C42.984 48.3125 45 46.1705 45 43.5312V8.46875C45 5.8295 42.984 3.6875 40.5 3.6875ZM14.907 38.7994C14.6584 39.2563 14.2491 39.5896 13.7692 39.7259C13.2893 39.8622 12.778 39.7903 12.348 39.5262C11.918 39.262 11.6043 38.8271 11.476 38.3172C11.3477 37.8073 11.4154 37.2641 11.664 36.8072L13.005 34.3465C14.514 33.8588 15.7515 34.2365 16.7175 35.4812L14.907 38.7994ZM27.9285 33.4317H10.875C9.843 33.4317 9 32.5344 9 31.4395C9 30.3446 9.8445 29.4473 10.875 29.4473H15.657L21.7875 18.1715L19.866 14.6461C19.6187 14.1889 19.5518 13.6462 19.68 13.1367C19.8082 12.6272 20.121 12.1924 20.55 11.9272C20.9804 11.6644 21.4911 11.5934 21.9706 11.7296C22.4501 11.8657 22.8594 12.1981 23.109 12.6539L23.943 14.1871L24.777 12.6539C24.9001 12.4277 25.064 12.2294 25.2592 12.0705C25.4544 11.9115 25.6772 11.7949 25.9148 11.7275C26.1525 11.66 26.4003 11.6429 26.6441 11.6771C26.888 11.7114 27.1231 11.7964 27.336 11.9272C27.5489 12.058 27.7355 12.2321 27.8852 12.4395C28.0348 12.647 28.1445 12.8837 28.208 13.1361C28.2715 13.3886 28.2876 13.6519 28.2553 13.911C28.2231 14.1701 28.1431 14.4199 28.02 14.6461L19.977 29.4489H25.7985C27.6915 29.4489 28.752 31.8092 27.927 33.4332L27.9285 33.4317ZM37.125 33.4317H34.4055L36.243 36.8088C36.759 37.7651 36.4485 38.9811 35.559 39.5278C34.659 40.076 33.5145 39.7461 33 38.801C29.916 33.1336 27.609 28.8703 26.0625 26.0414C24.4965 23.152 25.6125 20.2641 26.7285 19.2887C27.957 21.5502 29.7945 24.937 32.25 29.4489H37.125C37.6223 29.4489 38.0992 29.6588 38.4508 30.0324C38.8025 30.406 39 30.9127 39 31.4411C39 31.9694 38.8025 32.4761 38.4508 32.8498C38.0992 33.2234 37.6223 33.4317 37.125 33.4317Z"
+                  fill="currentColor"
+                />
+              </svg>
+            </button>
+            <a
+              class="footer_socialItem"
+              href="https://drive.google.com/file/d/1Okple-RY12IjxOm87VF3Qzbn6p9R6qNT/view?usp=sharing"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                viewBox="0 0 48 48"
+                fill="none"
+              >
+                <path
+                  d="M44.0362 26.5961L36.1982 31.0321L29.1682 24.0461L36.2542 17.0041L44.0362 21.4081C44.4955 21.6678 44.8776 22.0448 45.1434 22.5006C45.4093 22.9563 45.5494 23.4745 45.5494 24.0021C45.5494 24.5297 45.4093 25.0479 45.1434 25.5037C44.8776 25.9594 44.4955 26.3364 44.0362 26.5961ZM2.6742 1.84812C2.52578 2.20844 2.44967 2.59443 2.4502 2.98412V45.0181C2.4502 45.4521 2.5402 45.8561 2.6982 46.2181L25.0082 24.0441L2.6742 1.84812ZM27.0882 21.9781L33.6042 15.5021L6.9002 0.390117C6.32782 0.0611879 5.66118 -0.0649513 5.0082 0.032117L27.0882 21.9781ZM27.0882 26.1121L5.0882 47.9781C5.6842 48.0501 6.3122 47.9461 6.9002 47.6121L33.5482 32.5321L27.0882 26.1121Z"
+                  fill="currentColor"
+                />
+              </svg>
+            </a>
+            <a class="footer_socialItem" href="https://medium.com/@ordisnipes">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="56"
@@ -222,7 +253,7 @@
                 <g clip-path="url(#clip0_1095_112)">
                   <path
                     d="M18.8335 14C22.4802 14 25.9776 15.475 28.5562 18.1005C31.1348 20.726 32.5835 24.287 32.5835 28C32.5835 31.713 31.1348 35.274 28.5562 37.8995C25.9776 40.525 22.4802 42 18.8335 42C15.1868 42 11.6894 40.525 9.11078 37.8995C6.53215 35.274 5.0835 31.713 5.0835 28C5.0835 24.287 6.53215 20.726 9.11078 18.1005C11.6894 15.475 15.1868 14 18.8335 14ZM39.4585 16.3333C42.896 16.3333 45.1877 21.5577 45.1877 28C45.1877 34.4423 42.896 39.6667 39.4585 39.6667C36.021 39.6667 33.7293 34.4423 33.7293 28C33.7293 21.5577 36.021 16.3333 39.4585 16.3333ZM48.6252 17.5C49.496 17.5 50.2568 19.4297 50.6418 22.7407L50.7495 23.7743L50.7931 24.3227L50.8618 25.4753L50.8847 26.0797L50.9122 27.342L50.9168 28L50.9122 28.658L50.8847 29.9203L50.8618 30.527L50.7931 31.6773L50.7472 32.2257L50.6441 33.2593C50.2568 36.5727 49.4983 38.5 48.6252 38.5C47.7543 38.5 46.9935 36.5703 46.6085 33.2593L46.5008 32.2257C46.485 32.043 46.4705 31.8602 46.4572 31.6773L46.3885 30.5247C46.3796 30.3233 46.372 30.1218 46.3656 29.9203L46.3381 28.658V27.342L46.3656 26.0797L46.3885 25.473L46.4572 24.3227L46.5031 23.7743L46.6062 22.7407C46.9935 19.4273 47.752 17.5 48.6252 17.5Z"
-                    fill="#3A9F3B"
+                    fill="currentColor"
                   />
                 </g>
                 <defs>
@@ -230,14 +261,14 @@
                     <rect
                       width="55"
                       height="56"
-                      fill="white"
+                      fill="currentColor"
                       transform="translate(0.5)"
                     />
                   </clipPath>
                 </defs>
               </svg>
             </a>
-            <a class="footer_socialItem" href="#">
+            <a class="footer_socialItem" href="https://t.me/ordisnipe">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="46"
@@ -247,11 +278,11 @@
               >
                 <path
                   d="M41.533 0.212925L1.40835 15.97C0.104662 16.3997 0.249517 18.2619 1.55321 18.6917L11.693 21.8431L15.7489 34.4487C16.0386 35.4514 17.3423 35.7379 18.0666 35.0217L24.0056 29.5783L35.3043 37.7434C36.1734 38.3163 37.3322 37.8866 37.6219 36.8839L45.4441 3.65083C45.8786 1.21565 43.7058 -0.646551 41.533 0.212925ZM18.0666 24.2782L16.7629 31.727L13.8658 21.4133L42.1124 3.07784L18.0666 24.2782Z"
-                  fill="#3A9F3B"
+                  fill="currentColor"
                 />
               </svg>
             </a>
-            <a class="footer_socialItem" href="#"
+            <a class="footer_socialItem" href="https://twitter.com/ORDI_Snipe"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="52"
@@ -261,7 +292,7 @@
               >
                 <path
                   d="M39.4442 4.875H46.6116L30.9531 22.7717L49.3741 47.125H34.9484L23.6514 32.3548L10.7251 47.125H3.5534L20.3017 27.9825L2.63257 4.875H17.4201L27.6316 18.3755L39.4442 4.875ZM36.9287 42.835H40.9002L15.2642 8.93967H11.0024L36.9287 42.835Z"
-                  fill="#319933"
+                  fill="currentColor"
                 />
               </svg>
             </a>
@@ -270,6 +301,6 @@
       </div>
     </main>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/script.js"></script>
   </body>
 </html>
