--- a/index.html
+++ b/index.html
@@ -39,18 +39,12 @@
               ANALYTICAL PLATFORM BRC20, THE INAUGURAL ADVANCEMENT IN ARTIFICIAL
               INTELLIGENCE EVOLUTION
             </p>
-
-            <a
-              class="header_link"
-              href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x903C120966437A4f5fECC1113cEf9957F30AA4AA"
-            >
-              Trading on Uniswap
-            </a>
-
-            <p class="header_adress">CONTRACT ADRESS:</p>
           </div>
 
           <div class="header_right">
+            <p class="header_adress">
+              CONTRACT ADRESS: 0x3B414936F1CecC2EAe0B5E97705469b23B024b07
+            </p>
             <img
               src="./img/header-screen.png"
               width="1851"
@@ -174,6 +168,12 @@
       <div class="coming">
         <a class="coming_link" href="#">
           <span>Coming soon</span>
+        </a>
+        <a
+          class="coming_link"
+          href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x903C120966437A4f5fECC1113cEf9957F30AA4AA"
+        >
+          Trading on Uniswap
           <img width="186" height="186" src="./img/icon-click.png" alt="" />
         </a>
         <div class="coming_screen">
