--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <div class="header_right">
             <p class="header_adress">
-              CONTRACT ADRESS: 0x3B414936F1CecC2EAe0B5E97705469b23B024b07
+              CONTRACT ADDRESS: 0x3B414936F1CecC2EAe0B5E97705469b23B024b07
             </p>
             <img
               src="./img/header-screen.png"
@@ -171,7 +171,7 @@
         </a>
         <a
           class="coming_link"
-          href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x903C120966437A4f5fECC1113cEf9957F30AA4AA"
+          href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x3B414936F1CecC2EAe0B5E97705469b23B024b07"
         >
           Trading on Uniswap
           <img width="186" height="186" src="./img/icon-click.png" alt="" />
